# Monolith

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  rust.yml
backup/restic/: backup-policy.toml
backup/snapper/: root-config
config/monolith/: monolith.toml  ssh-banner.txt
config/pacman/: makepkg.conf  pacman.conf
config/systemd/: monolith-backup.service  monolith-backup.timer  monolith-mnweb.service  monolith-monitor.service  monolith-tune.service  monolith-update.service  monolith-update.timer
docs/en/: README.md  first-steps.md  installation.md
docs/es/: README.md  first-steps.md  installation.md
docs/ru/: README.md  first-steps.md  installation.md
docs/zh/: README.md  first-steps.md  installation.md
installer/: Cargo.toml
installer/src/: main.rs
iso/: build-iso.sh
iso/airootfs/etc/: motd
iso/profile/: packages.x86_64  pacman.conf  profiledef.sh
kernel/: build.sh
kernel/configs/: arm64.config  x86_64.config
kernel/patches/: clear-linux-perf.patch
mnctl/: Cargo.toml  config_default.toml
mnctl/src/: main.rs
mnctl/src/commands/: backup.rs  bench.rs  cluster.rs  config.rs  container.rs  deploy.rs  disk.rs  info.rs  iso.rs  kube.rs  mod.rs  monitor.rs  network.rs  notify.rs  plugin.rs  profile.rs  proxy.rs  security.rs  service.rs  template.rs  tune.rs  update.rs  vpn.rs  web.rs
mnctl/src/tui/: main.rs
mnpkg/: Cargo.toml
mnpkg/src/: main.rs
mnweb/: Cargo.toml
mnweb/src/: assets.rs  main.rs
mnweb/static/: app.css  app.js  index.html
monitoring/grafana/dashboards/: monolith-overview.json
monitoring/loki/: loki-config.yml  promtail-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: monolith-alerts.yml
scripts/: install.sh
security/apparmor/: cs2-server  discord-bot-nodejs  discord-bot-python  mariadb  minecraft-server  mongodb  nginx  nodejs  palworld-server  postgresql  python  redis  valheim-server
security/limits/: monolith.conf
security/nftables/: monolith.nft
security/ssh/: sshd_config
security/sysctl/: 99-monolith-cpu.conf  99-monolith-net.conf  99-monolith-security.conf
templates/cs2/: README.md  docker-compose.yml
templates/discord-bot-node/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json
templates/discord-bot-node/src/: index.js
templates/discord-bot-python/: .env.template  Dockerfile  README.md  docker-compose.yml
templates/mariadb/: README.md  docker-compose.yml  my.cnf
templates/minecraft/: README.md  docker-compose.yml
templates/mongodb/: README.md  docker-compose.yml  mongod.conf
templates/nginx-reverse-proxy/: README.md  docker-compose.yml  nginx.conf
templates/nginx-reverse-proxy/conf.d/: default.conf
templates/nodejs-app/: Dockerfile  README.md  docker-compose.yml
templates/palworld/: README.md  docker-compose.yml
templates/postgresql/: README.md  docker-compose.yml  postgresql.conf
templates/redis/: README.md  docker-compose.yml  redis.conf
templates/telegram-bot/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
templates/telegram-bot/src/: main.py
templates/valheim/: README.md  docker-compose.yml
