[package]
name = "mnctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Monolith OS control CLI — unified server management"
repository.workspace = true
default-run = "mnctl"

[[bin]]
name = "mnctl"
path = "src/main.rs"

[[bin]]
name = "mntui"
path = "src/tui/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
ratatui = { version = "0.28", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
bollard = "0.17"
nix = { version = "0.29", features = ["process", "signal", "fs", "net", "hostname"] }
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
tabled = "0.17"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
sysinfo = "0.31"
which = "6"
