[package]
name = "mnpkg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Monolith OS package manager wrapper"
repository.workspace = true

[[bin]]
name = "mnpkg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
tabled = "0.17"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
which = "6"
