[package]
name = "mnweb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Monolith OS web management UI — REST API + embedded SPA"
repository.workspace = true

[[bin]]
name = "mnweb"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.31"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
